--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,12 +2,17 @@ name: youtube-auto-delete
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # 5분마다 실행 (UTC 기준)
+    - cron: "*/5 * * * *"
   workflow_dispatch:
+
+concurrency:
+  group: youtube-auto-delete
+  cancel-in-progress: true
 
 jobs:
   run:
     runs-on: ubuntu-latest
+    timeout-minutes: 65
 
     steps:
       - uses: actions/checkout@v4
@@ -21,8 +26,12 @@ jobs:
         run: |
           pip install google-api-python-client google-auth google-auth-oauthlib
 
-      - name: Run auto delete bot
+      - name: Run auto delete bot every 5 minutes (within this run)
         env:
           YT_TOKEN_JSON: ${{ secrets.YT_TOKEN_JSON }}
         run: |
-          python app.py
+          for i in {1..12}; do
+            echo "===== tick $i ====="
+            python app.py
+            sleep 300
+          done
