--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
-    timeout-minutes: 65
+    timeout-minutes: 5
 
     steps:
       - uses: actions/checkout@v4
@@ -21,17 +21,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
-      - name: Install dependencies
+      - name: Install dependencies (cached)
         run: |
+          python -m pip install --upgrade pip
           pip install google-api-python-client google-auth google-auth-oauthlib
 
-      - name: Run auto delete bot every 5 minutes (within this run)
+      - name: Run bot
         env:
           YT_TOKEN_JSON: ${{ secrets.YT_TOKEN_JSON }}
         run: |
-          for i in {1..12}; do
-            echo "===== tick $i ====="
-            python app.py
-            sleep 300
-          done
+          python app.py
