--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,32 +12,23 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
-    timeout-minutes: 70
+    timeout-minutes: 5
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: pipcache-py311-googleapi-v1
+          cache: "pip"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install google-api-python-client google-auth google-auth-oauthlib
+          pip install -r requirements.txt
 
-      - name: Run bot every 5 minutes (12 times = 60 min)
+      - name: Run bot
         env:
           YT_TOKEN_JSON: ${{ secrets.YT_TOKEN_JSON }}
         run: |
-          for i in 1 2 3 4 5 6 7 8 9 10 11 12; do
-            echo "===== tick $i ====="
-            python app.py
-            sleep 300
-          done
+          python app.py
